--- a/meonggae_prj/.gitignore
+++ b/meonggae_prj/.gitignore
@@ -1,7 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/eclipse,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=eclipse,java
 
-mybatis-config.xml
+# mybatis-config.xml
 log4j2.xml
 
 lecture
