--- a/meonggae_prj/src/main/java/properties/database.properties
+++ b/meonggae_prj/src/main/java/properties/database.properties
@@ -1,4 +1,5 @@
 driver=oracle.jdbc.OracleDriver
-connectionURL=jdbc:oracle:thin:@192.168.10.218:1521:orcl
+#connectionURL=jdbc:oracle:thin:@192.168.10.218:1521:orcl
+connectionURL=jdbc:oracle:thin:@211.63.89.140:1521:orcl
 username=meongae
 password=4
