--- a/meonggae_prj/pom.xml
+++ b/meonggae_prj/pom.xml
@@ -232,7 +232,15 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.5</version>
 		</dependency>
-
+		
+		
+		
+		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4.7</version>
+		</dependency>
 
 	</dependencies>
 	<build>
