240710 12:34 관리자 링크에 아이피 제거, 에러 페이지 연결

--- a/meonggae_prj/src/main/webapp/WEB-INF/web.xml
+++ b/meonggae_prj/src/main/webapp/WEB-INF/web.xml
@@ -70,4 +70,23 @@
 		<filter-name>cef</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>	
+	
+	<!-- 에러 페이지 설정 시작 -->
+	<error-page>
+		<error-code>403</error-code>
+		<location>/WEB-INF/views/error/err_403.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/error/err_404.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>405</error-code>
+		<location>/WEB-INF/views/error/err_405.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/views/error/err_500.jsp</location>
+	</error-page>
+	<!-- 에러 페이지 설정 끝 -->
 </web-app>
